set modal to be fixed instead of absolute, fixes issue of modals being stuck to top of window

--- a/app/assets/stylesheets/modal.scss
+++ b/app/assets/stylesheets/modal.scss
@@ -1,7 +1,7 @@
 @import 'colors';
 
 .outer-modal {
-  position: absolute;
+  position: fixed;
   z-index: 100;
   top: 0;
   bottom: 0;
