--- a/app/assets/stylesheets/server_error.scss
+++ b/app/assets/stylesheets/server_error.scss
@@ -1,13 +1,6 @@
 @import 'colors';
 
 .outer-modal {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background-color: rgba(#D2D2D2,.62);
-
   &.error {
     z-index: 1000
   }
